--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "profile",
-  "version": "1.14.0",
+  "name": "chronoblog-profile",
+  "version": "1.0.0",
   "private": true,
   "description": "gatsby-starter-chronoblog-profile",
   "keywords": [],
@@ -13,10 +13,11 @@
   },
   "dependencies": {
     "gatsby": "^2.23.3",
+    "gatsby-plugin-disqus": "^1.1.4",
     "gatsby-plugin-google-analytics": "^2.1.23",
     "gatsby-plugin-manifest": "^2.4.11",
     "gatsby-plugin-sitemap": "^2.2.21",
-    "gatsby-theme-chronoblog": "^0.23.0",
+    "gatsby-theme-chronoblog": "^0.26.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -27,7 +28,6 @@
     "prettier": "^1.18.2"
   },
   "engines": {
-    "node": ">=10.15.0"
-  },
-  "starter-name": "gatsby-starter-chronoblog-profile"
+    "node": ">=12.21.0"
+  }
 }
